#8 converted to Java 8